# derive-prom-metrics

./: .gitignore  .rustfmt.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
examples/: gauges.rs  metrics.rs
scripts/: release.sh
src/: lib.rs  metric_type.rs  opts.rs
