[package]
description = "Build Prometheus metrics declaratively as structs"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "derive-prom-metrics"
repository  = "https://github.com/0xangelo/derive-prom-metrics"
version     = "0.1.0"

[lib]
proc-macro = true

[lints.clippy]
nursery     = { level = "warn", priority = 1 }
todo        = "warn"
unwrap_used = "warn"

[dependencies]
