[package]
authors     = ["Angelo Lovatto <doom444@pm.me>"]
categories  = ["development-tools", "rust-patterns"]
description = "Build Prometheus metrics declaratively as structs"
edition     = "2021"
keywords    = ["derive", "macro", "prometheus"]
license     = "MIT OR Apache-2.0"
name        = "derive-prom-metrics"
repository  = "https://github.com/0xangelo/derive-prom-metrics"
version     = "0.1.0"

[lib]
proc-macro = true

[lints.clippy]
nursery     = { level = "warn", priority = 1 }
todo        = "warn"
unwrap_used = "warn"

[dependencies]
darling     = "0.20"
itertools   = "0.14"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["extra-traits", "full"] }


[dev-dependencies]
prometheus = "0.13"
